Added google analytics

--- a/Nutrition2/ClientApp/package.json
+++ b/Nutrition2/ClientApp/package.json
@@ -2,6 +2,7 @@
   "name": "nutrition2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nutri-check.co.uk/",
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
     "@testing-library/jest-dom": "^5.16.5",
